Final working version for the Alexa Skill

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit preprocessor / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -134,5 +134,6 @@ dmypy.json
 # Data
 data/
 
+# MacOS
 .DS_Store
 
